--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -3,7 +3,7 @@ driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 url=jdbc:mysql://localhost:3306/trunk?useUnicode=true&characterEncoding=UTF-8
 username=root
-password=
+password=root
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
