pom添加一下两个jar包 <!-- Jstl 1.2 --> <!-- Standard  1.1.2 --> 解决JSP出现的Can not find the tag library descriptor for的问题

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    	<!-- Jstl 1.2 -->
+	    <dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+    	<!-- Standard  1.1.2 -->
+    	<dependency>
+		    <groupId>taglibs</groupId>
+		    <artifactId>standard</artifactId>
+		    <version>1.1.2</version>
+		</dependency>
     		<!-- log4j 日志 -->
 		<dependency>
 			<groupId>log4j</groupId>
